--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "main": "server.js",
   "dependencies": {
     "body-parser": "^1.15.0",
-    "express": "latest"
+    "express": "latest",
+    "mongoose": "^4.10.4"
   }
 }
